syntax = "proto3";

package antibruteforce;

option go_package = "./antibruteforce";

message CheckRequest {
  string login = 1;
  string password = 2;
  string ip = 3;
}

message CheckResponse {
  bool ok = 1;
}

message ResetRequest {
  string login = 1;
  string password = 2;
}

message ResetResponse {
  bool ok = 1;
}

message NetListRequest {
  string net = 1;
}

message NetListResponse {
  bool ok = 1;
}

service Checker {
  rpc Check(CheckRequest) returns (CheckResponse) {}
  rpc Reset(ResetRequest) returns (ResetResponse) {}
  rpc AddBlacklist(NetListRequest) returns (NetListResponse) {}
  rpc RemoveBlacklist(NetListRequest) returns (NetListResponse) {}
  rpc AddWhitelist(NetListRequest) returns (NetListResponse) {}
  rpc RemoveWhitelist(NetListRequest) returns (NetListResponse) {}
}